# Polynomials

./: CMakeLists.txt
modules/: Monomial.cppm
source/: CMakeLists.txt  main.cpp
source/List/: List.h
source/Monomials/: Monomial.cpp  Monomial.h  MonomialExceptions.cpp  MonomialExceptions.h  MonomialFiniteStateMachine.cpp  MonomialFiniteStateMachine.h  MonomialFiniteStateMachineStates.h
source/Polynomials/: Polynomial.cpp  Polynomial.h  PolynomialExceptions.cpp  PolynomialExceptions.h  PolynomialFiniteStateMachine.cpp  PolynomialFiniteStateMachine.h  PolynomialFiniteStateMachineStates.h
tests/: CMakeLists.txt  List_tests.cpp  Monomial_tests.cpp  Polynomial_tests.cpp  main.cpp
